# sistema_soap_1

cpp/: app1_soap_client.cpp  app2_translate.cpp  app3_native_server.cpp
dotnet/App1SoapClient/: Program.cs
dotnet/App2Translate/: App2Translate.csproj  Program.cs
dotnet/App3NativeServer/: App3NativeServer.csproj  Program.cs
go/: app1_soap_client.go  app2_translate.go  app3_native_server.go
java/: App1Server.java  App2Server.java  App3NativeServer.java
node/: app1_soap_client.js  app2_translate.js  app3_native_server.js
perl/: app1_soap_client.pl  app2_translate.pl  app3_native_server.pl
ruby/: app1_soap_client.rb  app2_translate.rb  app3_native_server.rb
rust/rust_soap_server/: Cargo.toml
